--- a/Game/GamePage.xaml
+++ b/Game/GamePage.xaml
@@ -7,10 +7,25 @@
     <ContentPage.ToolbarItems>
         <ToolbarItem Text="Back" Clicked="OnBackButtonClicked" Order="Primary" Priority="0" />
     </ContentPage.ToolbarItems>
-    <VerticalStackLayout VerticalOptions="Center" HorizontalOptions="Center">
-        <Label Text="Welcome to the Game!" FontSize="Large" />
-        <Label x:Name="TotalTilesLabel" FontSize="Medium" />
-        <Label x:Name="YourLetters" FontSize="Medium" />
-        <!-- Add your game UI elements here -->
+    <VerticalStackLayout HorizontalOptions="Center" VerticalOptions="Center">
+        <HorizontalStackLayout>
+           
+            <Grid x:Name="SelectedLettersGrid" HorizontalOptions="Center">
+                <Grid.ColumnDefinitions>
+                    <!-- Initial column definitions can be empty -->
+                </Grid.ColumnDefinitions>
+            </Grid>
+        </HorizontalStackLayout>
+
+        <HorizontalStackLayout HorizontalOptions="Center">
+            <VerticalStackLayout VerticalOptions="Center" HorizontalOptions="Center">
+                <Button Text="Zatwierdź" BackgroundColor="Green" WidthRequest="100"/>
+                <Label x:Name="TotalTilesLabel" FontSize="Medium" />
+                <StackLayout x:Name="LettersStackLayout" Orientation="Horizontal" />
+            </VerticalStackLayout>
+
+        </HorizontalStackLayout>
+
     </VerticalStackLayout>
+   
 </ContentPage>
