--- a/Game/GamePage.xaml
+++ b/Game/GamePage.xaml
@@ -18,6 +18,7 @@
         <StackLayout VerticalOptions="FillAndExpand" Grid.Row="1">
             <Grid x:Name="SelectedLettersGrid" VerticalOptions="CenterAndExpand" HorizontalOptions="Center" Margin="0,0,0,50" />
             <StackLayout x:Name="LettersStackLayout" Orientation="Horizontal" VerticalOptions="EndAndExpand" HorizontalOptions="Center" Margin="10" />
+            <Image x:Name="LoadingImage" Source="loading.gif" IsVisible="False" HorizontalOptions="Center" VerticalOptions="Center" WidthRequest="100" HeightRequest="100"/>
         </StackLayout>
 
         <StackLayout Orientation="Horizontal" HorizontalOptions="Center" VerticalOptions="Center" Grid.Row="1">
